--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assest/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
@@ -12,16 +13,16 @@
     <div class="slider">
 
         <div class="slides">
-            <img src="./assest/img/01.webp"  alt="">
-            <!--<img src="./assest/img/02.webp" alt="">
+            <!--<img src="./assest/img/01.webp"  alt="">
+            <img src="./assest/img/02.webp" alt="">
             <img src="./assest/img/03.webp" alt="">
             <img src="./assest/img/04.webp" alt="">
             <img src="./assest/img/05.webp" alt="">-->
         </div>
 
         <div class="contols">
-            <div class="right">R</div>
-            <div class="left">L</div>
+            <div class="right"><i class="fa-solid fa-forward"></i></div>
+            <div class="left"><i class="fa-solid fa-backward"></i></div>
         </div>
 
     </div>
